force-app/main/default/objects/vlocity_cmt__CartItem__c/vlocity_cmt__CartItem__c.object-meta.xml
<CustomObject>
    <description>An item that was added to an abandoned shopping cart. Master-detail child object of Cart (Cart__c).</description>
    <label>Cart Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cart Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>