force-app/main/default/objects/vlocity_cmt__CartItem__c/fields/vlocity_cmt__CartId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CartId__c</fullName>
    <description>ID of the parent Cart.</description>
    <label>Cart</label>
    <referenceTo>vlocity_cmt__Cart__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>CartItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>