force-app/main/default/objects/vlocity_cmt__CartItem__c/fields/vlocity_cmt__LineNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__LineNumber__c</fullName>
    <description>Line number of this cart line item in the source system.</description>
    <externalId>true</externalId>
    <label>Line Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>