force-app/main/default/objects/vlocity_cmt__CartItem__c/fields/vlocity_cmt__OneTimeTotal__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OneTimeTotal__c</fullName>
    <description>Total non-recurring charges to be paid up front at check-out for this line item.</description>
    <label>Total: One Time Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>