force-app/main/default/objects/vlocity_cmt__CartItem__c/fields/vlocity_cmt__ProductCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ProductCode__c</fullName>
    <description>Product code or SKU of the selected item.</description>
    <externalId>true</externalId>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>