force-app/main/default/objects/vlocity_cmt__CartItem__c/fields/vlocity_cmt__Quantity__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Quantity__c</fullName>
    <description>Quantity of the items requested.</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>